--- a/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
+++ b/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
@@ -7,10 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.CppInteropGen.SourceGenerator\ArchiToolkit.CppInteropGen.SourceGenerator.csproj"  OutputItemType="analyzer"/>
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.Fluent.SourceGenerator\ArchiToolkit.Fluent.SourceGenerator.csproj" OutputItemType="analyzer" />
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.InterpolatedParser.SourceGenerator\ArchiToolkit.InterpolatedParser.SourceGenerator.csproj" OutputItemType="analyzer" />
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.PureConst.Analyzer\ArchiToolkit.PureConst.Analyzer.csproj" OutputItemType="analyzer" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Assertions.FluentValidation\ArchiToolkit.Assertions.FluentValidation.csproj" />
+        <ProjectReference Include="..\..\src\libraries\ArchiToolkit.CppInteropGen\ArchiToolkit.CppInteropGen.csproj" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Fluent\ArchiToolkit.Fluent.csproj" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.PureConst\ArchiToolkit.PureConst.csproj" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj" OutputItemType="analyzer"  />
@@ -23,5 +25,7 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Console"/>
       <PackageReference Include="Seq.Extensions.Logging"/>
     </ItemGroup>
-
+    <ItemGroup>
+        <AdditionalFiles Include="C:\Users\ArchiTed\Work\Codes\KitchenSink\KitchenSink.Geometry.Occt.Cpp\*_C.cpp" Visible="false"/>
+    </ItemGroup>
 </Project>
