--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,28 +1,29 @@
 <Project>
-    <PropertyGroup>
-        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageVersion Include="FluentValidation" Version="11.11.0"/>
-        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" Version="1.1.2"/>
-        <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.13.0"/>
-        <PackageVersion Include="Microsoft.CSharp" Version="4.7.0"/>
-        <PackageVersion Include="PolySharp" Version="1.15.0"/>
-        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0"/>
-        <PackageVersion Include="Nuke.Common" Version="9.0.4"/>
-        <PackageVersion Include="Octokit" Version="14.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Logging" Version="3.0.0"/>
-        <PackageVersion Include="System.CodeDom" Version="8.0.0"/>
-        <PackageVersion Include="System.Drawing.Common" Version="9.0.2"/>
-        <PackageVersion Include="TUnit" Version="0.14.0"/>
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2"/>
-        <PackageVersion Include="Seq.Extensions.Logging" Version="8.0.0"/>
-        <PackageVersion Include="WPF-UI" Version="4.0.1"/>
-        <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.2"/>
-        <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.2"/>
-        <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.0"/>
-        <PackageVersion Include="Grasshopper" Version="7.0.20314.3001" Condition="'$(TargetFramework)' == 'net48'"/>
-        <PackageVersion Include="Grasshopper" Version="8.0.23304.9001" Condition="'$(TargetFramework)' != 'net48'"/>
-    </ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="FluentResults" Version="3.16.0" />
+    <PackageVersion Include="FluentValidation" Version="11.11.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" Version="1.1.2" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.13.0" />
+    <PackageVersion Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageVersion Include="PolySharp" Version="1.15.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
+    <PackageVersion Include="Nuke.Common" Version="9.0.4" />
+    <PackageVersion Include="Octokit" Version="14.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Logging" Version="3.0.0" />
+    <PackageVersion Include="System.CodeDom" Version="8.0.0" />
+    <PackageVersion Include="System.Drawing.Common" Version="9.0.2" />
+    <PackageVersion Include="TUnit" Version="0.14.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
+    <PackageVersion Include="Seq.Extensions.Logging" Version="8.0.0" />
+    <PackageVersion Include="WPF-UI" Version="4.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.2" />
+    <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.0" />
+    <PackageVersion Include="Grasshopper" Version="7.0.20314.3001" Condition="'$(TargetFramework)' == 'net48'" />
+    <PackageVersion Include="Grasshopper" Version="8.0.23304.9001" Condition="'$(TargetFramework)' != 'net48'" />
+  </ItemGroup>
 </Project>
