--- a/src/libraries/ArchiToolkit.RoslynHelper/ArchiToolkit.RoslynHelper.csproj
+++ b/src/libraries/ArchiToolkit.RoslynHelper/ArchiToolkit.RoslynHelper.csproj
@@ -8,5 +8,6 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp"/>
+        <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
     </ItemGroup>
 </Project>
