--- a/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
+++ b/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
@@ -27,6 +27,6 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Console"/>
         <PackageReference Include="Seq.Extensions.Logging"/>
         <AdditionalFiles Include="CppInteropGen.ini" />
-
+        <AdditionalFiles Include="..\ArchiToolkit.CppInteropGen.Cpp\**\*_C.cpp" visible="false"/>
     </ItemGroup>
 </Project>
